httpd/httpd-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
  namespace: httpd
  labels:
    app: httpd  #service가 바라보는 label이 아님. 주의.
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd  # Service가 바라보는 label 지정 
    spec:
      containers:
      - name: httpd
        image: httpd
