httpd/httpd-NP.yml
apiVersion: v1
kind: Service
metadata:
  name: httpd-np
  namespace: httpd
spec:
  selector:
    app: httpd
  type: NodePort
  ports:
  - name: httpd-np
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30181
