httpd/httpd-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
  namespace: httpd
spec:
  selector:
    app: httpd
  type: ClusterIP
  ports:
  - name: httpd-svc
    protocol: TCP
    port: 80
    targetPort: 80
